package com.example.habitflow.ui

object TestTags {
    const val EMAIL_TEXT_FIELD = "EMAIL_TEXT_FIELD"
    const val NAME_TEXT_FIELD = "NAME_TEXT_FIELD"
    const val PASSWORD_TEXT_FIELD = "PASSWORD_TEXT_FIELD"
    const val CONFIRM_PASSWORD_TEXT_FIELD = "CONFIRM_PASSWORD_TEXT_FIELD"
    const val SIGNUP_BUTTON = "SIGNUP_BUTTON"
    const val LOGIN_BUTTON = "LOGIN_BUTTON"
    const val LOGIN_TEXT_BUTTON = "LOGIN_TEXT_BUTTON"
    const val SIGNUP_TEXT_BUTTON = "SIGNUP_TEXT_BUTTON"
    const val ERROR_TEXT = "ERROR_TEXT"
    const val LOADER = "LOADER"
    const val HABIT_LIST = "HABIT_LIST"
    const val HABIT_ITEM_PREFIX = "HABIT_ITEM_"
    const val HABIT_TOGGLE_PREFIX = "HABIT_TOGGLE_"
    const val COMPLETED_COUNT = "COMPLETED_COUNT"

    const val HABIT_NAME_FIELD = "HABIT_NAME_FIELD"
...
