...

    fun signup() {

        val state = _uiState.value

        if (state.email.isBlank()) {
            _uiState.value = _uiState.value.copy(errorMessage = "Email is Required")
            viewModelScope.launch {
                _uiEvent.send(CommonUiEvent.DoNothing)
            }

            return
        }
...
